--- a/changelog
+++ b/changelog
@@ -1,3 +1,18 @@
+turnkey-osqa-12.1 (1) turnkey; urgency=low
+
+  * OSQA:
+
+    - Added apache alias for /admin_media/ (bugfix).
+        
+  * Hardcoded component versions:
+
+    osqa                0.9.0-beta3
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Fri, 05 Apr 2013 08:00:00 +0200
+
 turnkey-osqa-12.0 (1) turnkey; urgency=low
 
   * Initial public release of TurnKey OSQA.
